<resources>
    <string name="app_name">Gasto de Viajem</string>
    <string name="distance">Distancia</string>
    <string name="total_km">Total de Quilômetros</string>
    <string name="price">Preço</string>
    <string name="price_per_litro">Preço por Litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="total_spend">Seu gasto Total será de:</string>
    <string name="kms_per_liter">Kms por litro</string>
    <string name="total_value">R$: 0</string>
    <string name="calculate">Calcular</string>
    <string name="validation_fill_all_fields">Preencha todos os campos</string>
</resources>